--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+#gradient-canvas {
+  width: 100%;
+  height: 100vh;
+  --gradient-color-1: #09080f;
+  --gradient-color-2: #502887;
+  --gradient-color-3: #09080f;
+  --gradient-color-4: #FF005A;
+}
