--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -103,7 +103,7 @@
 
 #gradient-canvas {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   --gradient-color-1: #09080f;
   --gradient-color-2: #502887;
   --gradient-color-3: #09080f;
